--- a/appz.yml
+++ b/appz.yml
@@ -1,7 +1,7 @@
 app:
     name: PGConnect
     code: PGCONNECT
-    notify: appz@ecloudcontrol.com
+    notify: krishnan.rejith@gmail.com
 
 build:
     version: 0.2
@@ -11,7 +11,7 @@ build:
     image_template: pgconnect-0.2
 
 deploy:
-    context: alpha/DEV
+    context: rejith/DEV
     ingress: None
     replicas: 2
     port:
