--- a/appz.yml
+++ b/appz.yml
@@ -21,6 +21,7 @@ deploy:
 
   
 properties:
-    PG_NODES: postgres-ha-13-x-1.postgres-ha-13-x:5432,postgres-ha-13-x-2.postgres-ha-13-x:5432
+    POSTGRES_PRIMARY: postgres-ha-13-x-1.postgres-ha-13-x:5432
+    POSTGRES_SECONDARY: postgres-ha-13-x-2.postgres-ha-13-x:5432
     revision : 36
 
